fixed: task card gap responsive

--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -350,6 +350,10 @@ section{
     display: none;
   }
 
+  app-single-task {
+    width: auto;
+  }
+
   .example-list {
     flex-direction: row;
     overflow-x: scroll;
@@ -417,7 +421,7 @@ section{
     flex-direction: column;
     padding: 48px 32px 24px 32px;
   }
-  
+
   .board_header_right {
     @include dFlex($jc: center);
     width: 100%;
